# sweeper

./: .gitignore  LICENSE.md  README.md  TODO.md  mkdocs.yml  participants.txt.example  picks.txt.example  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: index.md
src/sweeper/: draw.py  io.py  main.py  option_required_if.py
tests/: conftest.py  test_draw.py  test_io.py  test_main.py  test_option_required_if.py
