[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sweeper"
version = "0.5.0"
description = "CLI for creating sweepstakes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "prettytable>=3.16.0",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-clarity",
  "pytest-mock",
  "ruff"
]

[project.scripts]
sweeper = "sweeper.main:sweeper"

[tool.uv]
package = true

[tool.ruff.format]
docstring-code-format = true
