[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sweeper"
version = "0.8.0"
description = "CLI for creating sweepstakes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "prettytable>=3.16.0",
]

[dependency-groups]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.18",
  "pytest",
  "pytest-clarity",
  "pytest-mock",
  "ruff",
]

[project.scripts]
sweeper = "sweeper.main:sweeper"

[tool.uv]
package = true

[tool.ruff.format]
docstring-code-format = true
